tests/purs/failing/OperatorAt.out
Error found:
at tests/purs/failing/OperatorAt.purs:6:18 - 6:19 (line 6, column 18 - line 6, column 19)

  Unable to parse module:
  Unexpected token '@'


See https://github.com/purescript/documentation/blob/master/errors/ErrorParsingModule.md for more information,
or to contribute content related to this error.

